--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vscode/settings.json
 0x02-functions_nested_loops/package.json
 0x02-functions_nested_loops/_putchar.c
+0x02-functions_nested_loops/1-main.c
