--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 0x02-functions_nested_loops/package.json
 0x02-functions_nested_loops/_putchar.c
 0x02-functions_nested_loops/1-main.c
+0x02-functions_nested_loops/0-putchar
+0x02-functions_nested_loops/2-alphabet_x10
+0x02-functions_nested_loops/1-alphabet
