--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 0x02-functions_nested_loops/0-putchar
 0x02-functions_nested_loops/2-alphabet_x10
 0x02-functions_nested_loops/1-alphabet
+0x02-functions_nested_loops/2-main.c
+0x02-functions_nested_loops/3-main.c
+*main.c
+0x02-functions_nested_loops/3-islower
+0x02-functions_nested_loops/7-last_digit
+0x02-functions_nested_loops/6-abs
+0x02-functions_nested_loops/5-sign
+0x02-functions_nested_loops/4-isalpha
