--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 0x02-functions_nested_loops/6-abs
 0x02-functions_nested_loops/5-sign
 0x02-functions_nested_loops/4-isalpha
+0x02-functions_nested_loops/8-24
+0x02-functions_nested_loops/9-times_table
