--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 0x02-functions_nested_loops/4-isalpha
 0x02-functions_nested_loops/8-24
 0x02-functions_nested_loops/9-times_table
+0x02-functions_nested_loops/10-add
