--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 0x02-functions_nested_loops/8-24
 0x02-functions_nested_loops/9-times_table
 0x02-functions_nested_loops/10-add
+0x02-functions_nested_loops/11-98
