--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 0x02-functions_nested_loops/9-times_table
 0x02-functions_nested_loops/10-add
 0x02-functions_nested_loops/11-98
+0x02-functions_nested_loops/100-times_table
