--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 0x02-functions_nested_loops/10-add
 0x02-functions_nested_loops/11-98
 0x02-functions_nested_loops/100-times_table
+0x02-functions_nested_loops/fi
