--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 0x02-functions_nested_loops/11-98
 0x02-functions_nested_loops/100-times_table
 0x02-functions_nested_loops/fi
+0x03-debugging/2-main
