--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 0x02-functions_nested_loops/100-times_table
 0x02-functions_nested_loops/fi
 0x03-debugging/2-main
+0x03-debugging/3-convert_day.c
+0x03-debugging/3-main_a.c
