4-more functions 0-isupper

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 0x02-functions_nested_loops/2-alphabet_x10
 0x02-functions_nested_loops/1-alphabet
 0x02-functions_nested_loops/*main.c
+0x04-more_functions_nested_loops/*main.c
 0x02-functions_nested_loops/3-islower
 0x02-functions_nested_loops/7-last_digit
 0x02-functions_nested_loops/6-abs
